# MusicView-Server

./: .gitignore  Cargo.toml  deploy.sh
src/: api.rs  collections.rs  main.rs
src/apis/: comment.rs  like.rs  like_artist.rs  mod.rs  reply.rs  user.rs
