[package]
name = "actix-mongo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5.1", features = ["rustls-0_23"] }
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1.0.188", features = ["derive"]}
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4.38"
actix-cors = "0.7.0"
dotenv = "0.15.0"
qstring = "0.7.2"
env_logger = "0.11.6"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
